K3s/goweb-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goweb-pod
  labels:
    zone: prod
    version: v1
    dummy: abc
spec:
  containers:
  - name: goweb-ctr
    image: carmelo0x99/goweb:2.0
    ports:
    - containerPort: 8888
