K3s/goweb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: goweb-svc
  namespace: default
spec:
  selector:
    zone: prod
    version: v1
  ports:
    - protocol: TCP
      port: 80
      nodePort: 31234
      targetPort: 8888
  type: NodePort
