K3s/goweb-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goweb-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: goweb-svc
            port:
              number: 80
